[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/altas/generic/player_bullet.tres" type="Texture" id=1]
[ext_resource path="res://game_objects/player_bullet/scripts/player_bullet.gd" type="Script" id=2]
[ext_resource path="res://components/hurt_hit_box/hit_box/objs/hit_box.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 6.0

[node name="player_bullet" type="Node2D"]
script = ExtResource( 2 )
velocity = 200

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="hit_box" parent="." instance=ExtResource( 3 )]
_name = "player_bullet"
_filter = [ "player" ]
_hit = 1

[node name="shape" type="CollisionShape2D" parent="hit_box"]
rotation = -1.5708
shape = SubResource( 1 )

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="hit" from="hit_box" to="." method="_on_hit_box_hit"]
